--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "fftt",
     "displayName": "fftt",
     "description": "FF Transpiler Tool",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "engines": {
         "vscode": "^1.48.0"
     },
@@ -82,8 +82,6 @@
         "@types/node": "^14.6.0",
         "@types/vscode": "^1.48.0",
         "@typescript-eslint/eslint-plugin": "^3.10.0",
-        "@typescript-eslint/parser": "^3.10.0",
-        "typescript": "^4.0.2",
-        "vsce": "^1.79.5"
+        "@typescript-eslint/parser": "^3.10.0"
     }
 }
